--- a/sheet2/Makefile
+++ b/sheet2/Makefile
@@ -16,6 +16,8 @@ CFLAGS = -march=native -Wall -std=gnu11 -fomit-frame-pointer -lm
 CFLAGS_DEBUG = -march=native -Wall -std=gnu11 -fno-omit-frame-pointer -fsanitize=address -g -lm
 
 $(PROGRAM)_variant1 = $(CC) $(CFLAGS) -O3 $(sources)
+$(PROGRAM)_variant_max = $(CC) $(CFLAGS) -O3 stride-max.c
+$(PROGRAM)_variant_max_debug = $(CC) $(CFLAGS_DEBUG) -O1 stride-max.c
 
 #############################################################################################
 
@@ -28,6 +30,14 @@ exe: .autoclean $(VARIANTS) Makefile
 $(PROGRAM)_variant1: $(sources) Makefile
 	$($(PROGRAM)_variant1) -S -o $(PROGRAM)_variant1.s
 	$($(PROGRAM)_variant1) -o $(PROGRAM)_variant1
+
+$(PROGRAM)_variant_max: stride-max.c Makefile
+	$($(PROGRAM)_variant_max) -S -o $(PROGRAM)_variant_max.s
+	$($(PROGRAM)_variant_max) -o $(PROGRAM)_variant_max
+
+$(PROGRAM)_variant_max_debug: stride-max.c Makefile
+	$($(PROGRAM)_variant_max_debug) -S -o $(PROGRAM)_variant_max_debug.s
+	$($(PROGRAM)_variant_max_debug) -o $(PROGRAM)_variant_max_debug
 
 .autoclean: Makefile
 	make clean
